# Cryovex-Launcher

./: .env.example  .gitignore  CMakeLists.txt  CryovexLauncher.pro  CryovexLauncher_resource.rc  DEVELOPMENT.md  README.md  qml.qrc
qml/: LoginView.qml  MainView.qml  SettingsView.qml  main.qml
src/: main.cpp
src/auth/: AuthManager.cpp  AuthManager.h  CMakeLists.txt  MicrosoftAuth.cpp  MicrosoftAuth.h
src/config/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  Profile.cpp  Profile.h
src/download/: CMakeLists.txt  DownloadManager.cpp  DownloadManager.h  DownloadTask.cpp  DownloadTask.h
src/launcher/: CMakeLists.txt  GameLauncher.cpp  GameLauncher.h  JvmArgumentBuilder.cpp  JvmArgumentBuilder.h
src/utils/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  Logger.cpp  Logger.h  NetworkUtils.cpp  NetworkUtils.h
src/version/: CMakeLists.txt  MinecraftVersion.cpp  MinecraftVersion.h  VersionManager.cpp  VersionManager.h
tests/: DEMO_RESULTS.md  README.md  test_auth.py
